resources/assets/sass/login.scss
// Bootstrap
@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900');

.login-page {

  * {
    font-family: 'Source Sans Pro', sans-serif;
    outline: none;
  }

  body {
    background: #4d4d4d;
    display: flex;
    min-height: 100vh;
    align-items: center;
    color: var(--body_color);

    & > div {
      position: relative;
      max-width: 400px;
      flex-basis: 400px;
      margin: auto;
      padding: 20px;
      text-align: left;

      .login-form {
        background-color: var(--navbar_background);
        border-radius: 7px;
        box-shadow: 0 4px 8px rgba(0, 0, 0, .17);

        .header > div {
          text-align: center;
          background-color: var(--sidebar_background);
          border-top-left-radius: 7px;
          border-top-right-radius: 7px;

          img {
            height: 50px;
          }
        }

        input, textarea, select,
        .multiselect, .multiselect > div, .multiselect .multiselect__single,
        input:focus, textarea:focus, select:focus {
          background-color: var(--box_background);
          color: var(--body_color);
        }

      }

    }
  }

  @import "formfields/button";
  @import "formfields/checkbox";
}

